@@ -1,5 +1,14 @@
 2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* Banter/ProviderUserManager.cs: Added a ProviderUserRemoved event to
+	  remove the user in the UI too
+	* Banter/PersonManager.cs: Fixed removal code so a person get's removed
+	  from the model
+	* Banter/PersonView.cs: spacing
+	* Banter/PersonSync.cs: Added handlers for a personRemoved event
+
+2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* Banter/ChatWindow.cs: Updated notification so you don't get a
 	  notification for each message updated when a window firsts opens
 
